<resources>
    <string name="app_name">Recipease</string>
    <string name="google_maps_api_key">AIzaSyD_gosGg3qBnX2WOj6-fglzL49kTMO-KuY</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="IngredientHeader">Ingredients:</string>
    <string name="facebook_app_id">248125599315706</string>
    <string name="fb_login_protocol_scheme">fb248125599315706</string>

    <string name="nutrition_api_key">9uCSn4GQdWwwUrPZgHmrFN8JvUvwL1Aea4mwFVbB</string>

    <string name="DATE">Date Created (Recent to Old)</string>
    <string name="TIME">Time (Low to High)</string>
    <string name="RATING">Rating (High to Low)</string>

    // transition elements
    <string name="TRANS_RECIPEIMAGE">recipeimage</string>
    <string name="TRANS_TITLE">title</string>
    <string name="TRANS_DESCRIP">description</string>
    <string name="MAPS_TRANS_NAME">store_name</string>
    <string name="MAPS_TRANS_LOCATION">store_location</string>

    <string-array name="tags">
        <item>breakfast</item>
        <item>lunch</item>
        <item>dinner</item>
        <item>dessert</item>
        <item>vegan</item>
        <item>vegetarian</item>
        <item>gluten free</item>
        <item>dairy free</item>
        <item>italian</item>
        <item>chinese</item>
        <item>indian</item>
        <item>mexican</item>
    </string-array>

    <string-array name="dish_tags">
        <item>breakfast</item>
        <item>lunch</item>
        <item>dinner</item>
        <item>dessert</item>
    </string-array>

    <string-array name="dietary_info_tags">
        <item>vegan</item>
        <item>vegetarian</item>
        <item>gluten free</item>
        <item>dairy free</item>
    </string-array>

    <string-array name="meal_tags">
        <item>italian</item>
        <item>chinese</item>
        <item>indian</item>
        <item>mexican</item>
    </string-array>

    <string-array name="sorting_methods">
        <item>@string/DATE</item>
        <item>@string/TIME</item>
        <item>@string/RATING</item>
        <item>Sort</item>
    </string-array>

    <string-array name="ingredients">
        <item>milk</item>
        <item>eggs</item>
        <item>flour</item>
        <item>butter</item>
        <item>sugar</item>
        <item>bread</item>
        <item>peanut butter</item>
        <item>vanilla</item>
        <item>tomato sauce</item>
        <item>yogurt</item>
        <item>cheese</item>
        <item>oats</item>
        <item>baking soda</item>
        <item>oil</item>
    </string-array>

    <string-array name="units">
        <item>cups</item>
        <item>units</item>
        <item>tbsp</item>
        <item>tsp</item>
        <item>lbs</item>
        <item>oz</item>
    </string-array>

    // parallel array with definitions--make sure to access a term and its definition with the same index
    <string-array name="cooking_terms">
        <item>al dente</item>
        <item>baste</item>
        <item>broil</item>
        <item>caramelize</item>
        <item>cream</item>
        <item>dice</item>
        <item>fold</item>
        <item>marinate</item>
        <item>mince</item>
        <item>poach</item>
        <item>reduce</item>
        <item>saute</item>
        <item>sear</item>
        <item>stir-fry</item>
        <item>whip</item>
        <item>score</item>
        <item>pare</item>
    </string-array>

    <string-array name="definitions">
        <item>Italian term used to describe pasta that is cooked until it offers a slight resistance to the bite.</item>
        <item>To moisten foods during cooking with pan drippings or special sauce to add flavor and prevent drying.</item>
        <item>To cook under strong, direct heat.</item>
        <item>To heat sugar in order to turn it brown and give it a special taste.</item>
        <item>To beat ingredients, usually sugar and a fat, until smooth and fluffy.</item>
        <item>To cut food into very small (1/8-to 1/4-inch) cubes.</item>
        <item>To combine light ingredients such as whipped cream or beaten egg whites with a heavier mixture, using a gentle over-and-under motion, usually with a rubber spatula.</item>
        <item>To soak in a flavored liquid; usually refers to meat, poultry, or fish.</item>
        <item>To cut into tiny pieces, usually with a knife.</item>
        <item>To cook gently over very low heat in barely simmering liquid just to cover.</item>
        <item>To thicken a liquid and concentrate its flavor by boiling to reduce volume.</item>
        <item>To cook food in a small amount of fat over relatively high heat.</item>
        <item>To brown very quickly by intense heat. </item>
        <item>To quickly cook small pieces of food over high heat, stirring constantly.</item>
        <item>To beat food with a whisk or mixer to incorporate air and produce volume.</item>
        <item>To cut narrow grooves or gashes partway through the outer surface of food.</item>
        <item>To remove the outermost skin of a fruit or vegetable.</item>
    </string-array>

    //UI element text displays
    <string name="filterbutton">Filter Recipes</string>
    <string name="ingredients_filter">Need to get rid of some ingredients?</string>
    <string name="ingredients_filter_prompt">Choose Ingredient</string>

    <string name="congrats_message">Congrats! You did it!</string>
    <string name="rating">Rate this recipe:</string>
    <string name="leave_comment">Leave a comment:</string>
    <string name="low_rating">Uh oh! Need a back-up plan?</string>


    <string name="channel_name">CookingAppChannel</string>
    <string name="channel_description">Channel for CookingApp Notifications</string>
    <string name="CHANNEL_ID">cooking_app_id</string>
    <string name="youtube_api_key">AIzaSyD_gosGg3qBnX2WOj6-fglzL49kTMO-KuY</string>


</resources>
