<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".RecipeDetailViewActivity">
    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:layout_below="@+id/toolbar_main"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"

                >

                <ImageView
                    android:id="@+id/ivRecipeImage"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:src="@android:color/darker_gray"
                    android:transitionName="@string/TRANS_RECIPEIMAGE" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ivRecipeImage"
                    android:layout_centerHorizontal="true"

                    android:text="Title"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:transitionName="@string/TRANS_TITLE" />

                <TextView
                    android:id="@+id/tvIngredientHeader"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"

                    android:layout_alignStart="@id/tvDescription"
                    android:layout_below="@+id/tvDescription"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/IngredientHeader"
                    android:textSize="18sp" />

                <ListView
                    android:id="@+id/lvIngredients"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"

                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@id/tvIngredientHeader"
                    android:layout_below="@id/tvIngredientHeader"
                    android:divider="@android:color/transparent">


                </ListView>

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_below="@+id/rbDisplayRating"
                    android:layout_centerHorizontal="true"
                    android:text="Time" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="10dp"
                    android:layout_below="@+id/tvTime"

                    android:text="Description"
                    android:textSize="18sp"
                    android:transitionName="@string/TRANS_DESCRIP" />

                <ImageView
                    android:id="@+id/ivSaveRecipe"
                    android:layout_width="25dp"
                    android:layout_height="25dp"

                    android:layout_alignTop="@+id/ivRecipeImage"
                    android:layout_toEndOf="@+id/fb_share_button"
                    android:src="@drawable/heart"
                    android:tint="@color/colorPrimaryDark" />

                <LinearLayout
                    android:id="@+id/llComments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/tvIngredientHeader"
                    android:layout_margin="10dp"
                    android:layout_toRightOf="@id/lvIngredients"
                    android:orientation="vertical"
                    android:paddingVertical="3dp"></LinearLayout>

                <TextView
                    android:id="@+id/tvCommentLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tvIngredientHeader"
                    android:layout_marginLeft="10dp"
                    android:textSize="18sp"
                    android:layout_toEndOf="@+id/tvIngredientHeader"
                    android:text="Comments:" />

                <ImageView
                    android:id="@+id/fb_share_button"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignTop="@+id/ivRecipeImage"
                    android:layout_marginRight="5dp"
                    android:layout_toEndOf="@+id/ivRecipeImage"
                    android:src="@drawable/share_icon"
                    android:tint="@color/colorPrimaryDark" />

                <RatingBar
                    android:id="@+id/rbDisplayRating"
                    style="@android:style/Widget.DeviceDefault.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTitle"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
         />




</RelativeLayout>